Ensure favicons, even broken ones, are 16px tall
When the list attempts to load a favicon from an extension's manifest,
the icon doesn't load and displays taller than 16px without setting its
height.

--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -25,6 +25,7 @@ td.timeGroupRow {
 }
 
 .favicon {
+  height: 16px;
   /* Vertically align in <td /> */
   vertical-align: sub;
 }
